Regession: Smooth modifier with vergex group not work for negative factors #104176

Closed
opened 2023-01-27 13:59:29 +01:00 by Alexandr · 13 comments

System Information
Operating system: Debian Testing
Graphics card: RTX 3090

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-23 22:37, hash: b450ba84d9
Worked: version: 2.81 (sub 1), branch: master, commit date: 2019-08-09 18:48, hash: a571ff2c16

Caused by: abc8d6b12c
Commit add if (f_new <= 0.0f) {continue;} case for vertext group mode

Short description of error
When Smooth modifier with Vergex Group don't work for negative factor value. Works only for positive values.

#104176.blend

Exact steps for others to reproduce the error

  1. Apply "simple" subdivide to cube
  2. Create vertex group and add at least 1 verticle to it
  3. Add "Smooth" modifier, select vertex group and set factor to any negative value.
**System Information** Operating system: Debian Testing Graphics card: RTX 3090 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-23 22:37, hash: `b450ba84d9` Worked: version: 2.81 (sub 1), branch: master, commit date: 2019-08-09 18:48, hash: `a571ff2c16` Caused by: abc8d6b12c *Commit add `if (f_new <= 0.0f) {continue;}` case for vertext group mode* **Short description of error** When Smooth modifier with Vergex Group don't work for negative factor value. Works only for positive values. [#104176.blend](https://archive.blender.org/developer/F14218301/T104176.blend) **Exact steps for others to reproduce the error** 1. Apply "simple" subdivide to cube 2. Create vertex group and add at least 1 verticle to it 3. Add "Smooth" modifier, select vertex group and set factor to any negative value.
Author

Added subscriber: @scaled

Added subscriber: @scaled

Added subscriber: @mod_moder

Added subscriber: @mod_moder

I not sure that negative factor is really work case so thinking that that not a bug.

I not sure that negative factor is really work case so thinking that that not a bug.
Author

I use Smooth with -1 factor before Subdivision, so my models will not loose volume and little details. But now i need to apply this modifier only to some part of the model. I probably can work around that, but it worked so well in Blender 2.79b, so why it's not present in current version?

I use Smooth with -1 factor before Subdivision, so my models will not loose volume and little details. But now i need to apply this modifier only to some part of the model. I probably can work around that, but it worked so well in Blender 2.79b, so why it's not present in current version?

Okay, will check this, maybe regression

Okay, will check this, maybe regression
Iliya Katushenock changed title from Smooth modifier with vergex group not work for negative factors to Regession: Smooth modifier with vergex group not work for negative factors 2023-01-27 14:52:59 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I did not find information about this in the release notes, nor in the commit message.

I did not find information about this in the release notes, nor in the commit message.
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

@mod_moder : please always tag the module (and not only a submodule)
Also: this changed 3.5 years ago, what makes you think this is the highest priority we have? (usually we only assign High priority to regressions if they are recent [meaning younger than ~6 months])

CC @mont29

@mod_moder : please always tag the module (and not only a submodule) Also: this changed 3.5 years ago, what makes you think this is the highest priority we have? (usually we only assign High priority to regressions if they are recent [meaning younger than ~6 months]) CC @mont29

It seemed that the regression itself was high priority, so did not pay attention to the date, yes ...

It seemed that the regression itself was high priority, so did not pay attention to the date, yes ...
Bastien Montagne self-assigned this 2023-01-31 09:43:14 +01:00

This was indeed not an intended change, funny it took so long for someone to notice and report that bug. :)

This was indeed not an intended change, funny it took so long for someone to notice and report that bug. :)

This issue was referenced by 9f866a92dc

This issue was referenced by 9f866a92dc4c9eb19532dddfabe43e2115eefe3f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104176
No description provided.