Fix T104176: Smooth modifier with vergex group not work for negative factors.

Regression from rBabc8d6b12ce9, over three years ago!

Should be backported to the active LTS releases too.